--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section class="intro">
             <div class="container">
-                <p>The early bird catches the worm.</p>
+                <p>Zmiana z ćwiczenia gita</p>
             </div>
         </section>
         <section class="about">
