Add-title to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="splash">
             <div class="splash-inner">
                 <i class="fas fa-hat-wizard"></i>
-                <h1 class="page-title">Kasia Krysińska</h1>
+                <h1 class="page-title">Janek Kowalski</h1>
                 <h2 class="page-subtitle">Welcome to my world!</h2>
             </div>
         </header>
